--- a/.github/workflows/prs.yaml
+++ b/.github/workflows/prs.yaml
@@ -16,7 +16,8 @@ jobs:
         uses: actions/setup-node@v5
       - name: Running tests in PR
         run: |
-          echo "Running tests in PR ${{ github.event.pull_request.title }}"
+          # echo "Running tests in PR ${{ github.event.pull_request.title }}"
+          echo "&& echo 'hello world!"
           npm run build
       - name: Upload Results
         if: always()
