add to feature branch

--- a/.github/workflows/prs.yaml
+++ b/.github/workflows/prs.yaml
@@ -17,7 +17,7 @@ jobs:
       - name: Running tests in PR
         run: |
           # echo "Running tests in PR ${{ github.event.pull_request.title }}"
-          echo "&& echo 'hello world!"
+          echo "&& echo 'hello world!" #
           npm run build
       - name: Upload Results
         if: always()
